# Geminid-Desk

./: Cargo.toml
src/: chat.rs  chat_completion.rs  main.rs  sessions.rs  style.rs  widgets.rs
