[package]
name = "gemini-gui"
description = "Friendly interface to chat with an Gemini API."
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
exclude = ["media/**"]
categories = ["visualization", "gui"]
keywords = ["gemini", "llm", "ai", "egui", "gui", "ui"]
homepage = "https://github.com/LaVashikk/Gemini-eGUI"
repository = "https://github.com/LaVashikk/Gemini-eGUI"
authors = ["LaVashik <me@lavashik.dev>"]

# [lints.rust]
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
eframe = { version = "0.31.1", default-features = false, features = [
    "persistence",
    "x11",
    "wayland",
    "accesskit",
    "glow",
] }
egui_commonmark = { git = "https://github.com/zeozeozeo/egui_commonmark.git", branch = "twemoji", features = [
    "twemoji",
    "better_syntax_highlighting",
    "svg",
] }
egui-snow = "0.31.0"
env_logger = "0.11"
flowync = { version = "5.1", features = ["compact"] }
log = "0.4.27"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
egui-modal = { git = "https://github.com/zeozeozeo/egui-modal.git", branch = "egui-0.31" }
tts = { version = "0.26.3", optional = true }
parking_lot = { version = "0.12", optional = true }
bytesize = "2.0.1"
timeago = { version = "0.4", default-features = false, features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
egui_virtual_list = "0.7.0"
serde = { version = "1", features = ["derive"] }
rfd = { version = "0.15.3", default-features = false, features = [
    "tokio",
    "xdg-portal",
] }
anyhow = "1"
serde_json = "1"
egui-notify = "0.19.0"
ron = "0.10.1"
fastrand = "2.3.0"
futures = "0.3"
egui-twemoji = "0.7.1"
image = "0.25.6"
egui_extras = { version = "0.31.1", features = ["file", "image"] }
base64-stream = "4.0"
url = "2"
openssl = { version = "0.10.73", features = ["vendored"] }
gemini-rust = { git = "https://github.com/LaVashikk/gemini-rust-pr.git" }
gemini-code-assist-adapter = { path = "./gemini-code-assist-adapter" }
mime_guess = "2.0.5"
base64 = "0.22.1"
enum-iterator = "2.1.0"
open = "5.3.2"
reqwest = { version = "0.12.24", features = ["socks"] }
futures-util = "0.3.31"
time = { version = "0.3", features = ["serde"] }

[features]
default = []
tts = ["parking_lot", "dep:tts"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
